<resources>
    <string name="app_name">Mock Android SBI</string>
    <string name="no_data_text">For testing, get Info and Capture results</string>
    <string name="key_alias">Key Alias</string>
    <string name="key_store_password">Key Store Password</string>
    <string name="add_p12">Add P12</string>
    <string name="face_score">Face Score</string>
    <string name="finger_score">Finger Score</string>
    <string name="iris_score">Iris Score</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="last_upload">Last Upload</string>
    <string name="browse">Browse</string>
    <string name="p12_config">P12 Config</string>
    <string name="modality_config">Modality Config</string>
    <string name="_30">30</string>
    <string name="face">Face</string>
    <string name="device_status">Device Status</string>
    <string name="response_delay">Response Delay</string>
    <string name="milliseconds">Milliseconds</string>
    <string name="file_path">File path</string>
    <string name="score">Score</string>
    <string name="finger">Finger</string>
    <string name="iris">Iris</string>
    <string name="response_delay_in_ms">Response Delay(in ms)</string>
    <string name="registration">Registration</string>
    <string name="device_config">Device Config</string>
    <string name="authentication">Authentication</string>
    <string name="device_usage">Device Usage</string>
    <string name="device_key">Device Key</string>
    <string name="ftm_key">FTM Key</string>
    <string name="mosip_ida_config">MOSIP IDA Config</string>
    <string name="mosip_auth_app_id">Mosip Auth App Id</string>
    <string name="mosip_auth_client_id">Mosip Auth Client Id</string>
    <string name="mosip_auth_secret_key">Mosip Auth Secret Key</string>
    <string name="mosip_auth_server_url">Mosip Auth Server URL</string>
    <string name="mosip_ida_server_url">Mosip IDA Server URL</string>
    <string name="app_id">App Id</string>
    <string name="client_id">Client Id</string>
    <string name="secret_key">Secret Key</string>
    <string name="auth_server_url">Auth Server URL</string>
    <string name="ida_server_url">IDA Server URL</string>
    <string name="load_and_validate_certificates">Load and Validate Certificates</string>
    <string name="stay_steady">Stay steady</string>
    <string name="flip">Flip</string>
    <string name="flash">Flash</string>
    <string name="settings">Settings</string>
    <string name="rcapture">Rcapture</string>
    <string name="info">Info</string>
    <string name="discover">Discover</string>
    <string name="capture">Capture</string>
    <string name="device_purpose_registration">Device Purpose: Registration</string>
    <string name="device_purpose_auth">Device Purpose: Auth</string>
    <string name="mosip_logo">Mosip logo</string>
    <string name="key_label">Key Label</string>
    <string name="export_ftm_key">Export FTM Key</string>
    <string name="export_device_key">Export Device Key</string>
</resources>