<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="client.KeyCredentialFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/custom_border"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/key_label_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/key_label"
            android:textAlignment="center"
            android:textColor="@color/mosip_primary"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/key_alias_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/key_alias"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/key_store_password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/key_store_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fileChooserFragment"
            android:name="client.FileChooserFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/fragment_file_chooser" />
    </LinearLayout>

</FrameLayout>