<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="io.mosip.mock.sbi.device.CaptureActivity">

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:textAlignment="center"
        android:text="@string/stay_steady"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:gravity="bottom|center_horizontal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.20"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ImageButton
            android:id="@+id/btnFlip"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:foregroundGravity="center"
            android:src="@drawable/flip_camera"
            android:text="@string/flip" />

        <ImageButton
            android:id="@+id/btn_flash"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/flash_off"
            android:text="@string/flash" />

    </LinearLayout>

</LinearLayout>