<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="client.ClientActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mosip_primary"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@android:color/white"></com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_client">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_client">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:minHeight="80dp"
                app:cardBackgroundColor="#cdcdcd"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp">

                    <TableRow android:id="@+id/manufacturer_row">

                        <com.google.android.material.textview.MaterialTextView
                            android:fontFamily="sans-serif-condensed"
                            android:text="Manufacturer"
                            android:textColor="@android:color/black" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:text=":"
                            android:textColor="@android:color/black" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/manufacturer"
                            android:fontFamily="sans-serif-condensed"
                            android:text="Android"
                            android:textColor="@android:color/black" />
                    </TableRow>

                    <TableRow android:id="@+id/modelid_row">

                        <com.google.android.material.textview.MaterialTextView
                            android:fontFamily="sans-serif-condensed"
                            android:text="Model"
                            android:textColor="@android:color/black" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:text=":"
                            android:textColor="@android:color/black" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/model_id"
                            android:fontFamily="sans-serif-condensed"
                            android:text="AndroidFaceCamera"
                            android:textColor="@android:color/black" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/device_id_row"
                        android:visibility="gone">

                        <com.google.android.material.textview.MaterialTextView
                            android:fontFamily="sans-serif-condensed"
                            android:text="Device ID"
                            android:textColor="@android:color/black" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:text=":"
                            android:textColor="@android:color/black" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/device_id"
                            android:fontFamily="sans-serif-condensed"
                            android:text=""
                            android:textColor="@android:color/black" />
                    </TableRow>

                    <TableRow android:id="@+id/device_status_row">

                        <com.google.android.material.textview.MaterialTextView
                            android:fontFamily="sans-serif-condensed"
                            android:text="Device status"
                            android:textColor="@android:color/black" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:text=":"
                            android:textColor="@android:color/black" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/device_status"
                            android:fontFamily="sans-serif-condensed"
                            android:text="Not Ready"
                            android:textColor="@android:color/black" />
                    </TableRow>
                </TableLayout>
            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/settingBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="openSettings"
                android:text="@string/settings"
                app:layout_constraintBottom_toTopOf="@+id/card2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card"
                app:layout_constraintVertical_bias="0.289" />

            <Button
                android:id="@+id/validate_cert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="askPermissionAndValidateCertificates"
                android:text="@string/load_and_validate_certificates"
                app:layout_constraintBottom_toTopOf="@+id/card2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settingBtn"
                app:layout_constraintVertical_bias="0.736" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card2"
                android:layout_width="367dp"
                android:layout_height="291dp"
                android:layout_margin="16dp"
                android:elevation="5dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toTopOf="@id/action_table"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/empty_layout"
                    android:layout_width="367dp"
                    android:layout_height="291dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        android:src="@drawable/logo"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/client_progress_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:visibility="gone">

                    <ProgressBar
                        android:id="@+id/client_progress_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/response_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:visibility="gone">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/response_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="Response : "
                        android:textColor="@color/design_default_color_on_secondary"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/share_response"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:background="#0000"
                        android:src="@drawable/ic_baseline_share_24"
                        android:text="share"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/mosip_primary" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textbox"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:padding="8dp"
                        android:scrollbars="vertical"
                        android:textColor="@color/design_default_color_on_secondary"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/share_response" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/deviceUsageTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_purpose_registration"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@id/action_table"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card2"
                />

            <TableLayout
                android:id="@+id/action_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/deviceUsageTextView">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/discover"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:width="120dp"
                        android:text="@string/discover" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="120dp"
                        android:text="@string/info" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/rcapture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="120dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/rcapture" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/capture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="120dp"
                        android:text="@string/capture" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/deviceKeyExportBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="120dp"
                        android:layout_marginEnd="10dp"
                        android:text="Export Device Key" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/ftmKeyExportBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="120dp"
                        android:text="Export FTM Key" />
                </TableRow>
            </TableLayout>

            <ImageView
                android:id="@+id/logo"
                android:layout_width="128dp"
                android:layout_height="64dp"
                android:layout_marginBottom="20dp"
                android:onClick="mosipSpecWebsite"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toTopOf="@id/mosip_link_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/mosip_logo" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mosip_link_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="9dp"
                android:text="www.mosip.io"
                android:textColor="@color/mosip_primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>